--- a/index.html
+++ b/index.html
@@ -51,6 +51,29 @@
             <div class="work"><a href=""data-after="VELADA">VELADA</a></div>
         </div>
     </section>
+    <section class="section connect">
+        <div class="title">CONNECT</div>
+        <div class="container-connect">
+            <div class="links">
+                <div class="box"></div>
+                <div class="link"><a href="">Linkeding</a></div>
+            </div>
+            <div class="links">
+                <div class="box"></div>
+                <div class="link"><a href="">Instagram</a></div>
+            </div>
+        </div>
+        <div class="contact">
+            <div class="contact-info">
+                <div class="info-text">EMAIL</div>
+                <div class="contact-link">alexzv8@gmail.com</div>
+            </div>
+            <div>
+                <div class="info-text">PHONE</div>
+                <div class="contact-link">+34 675 467 816</div>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="sound">
             <div>SOUND</div>
