--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="container-connect">
             <div class="links">
                 <div class="box"></div>
-                <div class="link"><a href="">Linkeding</a></div>
+                <div class="link"><a href="">Linkedin</a></div>
             </div>
             <div class="links">
                 <div class="box"></div>
