--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </section>
     <section class="section my-work">
-        <div class="title">WHAT I DO</div>
+        <div class="title">WHAT I DO ?</div>
         <div class="works">
             <div class="work"><a href="" data-after="SPOTIFY">SPOTIFY</a></div>
             <div class="work"><a href=""data-after="SHOP">SHOP</a></div>
@@ -52,11 +52,11 @@
         </div>
     </section>
     <section class="section connect">
-        <div class="title">CONNECT</div>
+        <div class="title">CONTACT</div>
         <div class="container-connect">
             <div class="links">
                 <div class="box"></div>
-                <div class="link"><a href="">Linkedin</a></div>
+                <div class="link"><a href="">LinkedIn</a></div>
             </div>
             <div class="links">
                 <div class="box"></div>
